--- a/ExecutorBase/ExecutorBase.csproj
+++ b/ExecutorBase/ExecutorBase.csproj
@@ -10,6 +10,7 @@
     <RootNamespace>ExecutorBase</RootNamespace>
     <AssemblyName>ExecutorBase</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <LangVersion>6</LangVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
     <TargetFrameworkProfile />
